# 42ut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fillit.sh  gnl.sh  lib.sh  libft.sh
fillit/: CMakeLists.txt  test_2arg.expected  test_f7.fillit  test_f8.fillit  test_v1.expected  test_v1.fillit  test_v2.expected  test_v4.expected  test_v5.fillit  test_v7.fillit
gnl/: CMakeLists.txt  test_gnl1.c  test_gnl2.c  test_gnl3.c  test_gnl4.c  test_gnl5.c  test_gnl6.c  test_gnl7.c
libft/: CMakeLists.txt  test_atoi.c  test_ifsbuf.c  test_itoa_base.c  test_strnstr.c  test_strsplit.c  test_strstr.c
